# gazebo-classic-example

./: README.md  setup.bash
src/sim/: CMakeLists.txt  package.xml
src/sim/description/: camera.xacro  inertia.xacro  robot.xacro
src/sim/launch/: sim.launch.py
src/sim/src/: controller.cpp
src/sim/worlds/: zero_g.world
